@@ -1,3 +1,6 @@
+[B]2.5[/B]
+[fixed] stahovani TVDB art - lepsi parsovani
+  
 [B]2.4[/B]
 [fixed] element id nyni obsahuje TVDBid pro trakt.tv
 [fixed] normalizace mezer v nazvech
